--- a/.github/workflows/U30Air-TEST.yml
+++ b/.github/workflows/U30Air-TEST.yml
@@ -30,7 +30,7 @@ jobs:
           path: kernel_source
           key: kernel-source-u30air-5.4.254
           restore-keys: |
-            kernel-source-u30air-
+            kernel-source-u30air-5.4.254
 
       - name: Free disk space
         uses: jlumbroso/free-disk-space@main
@@ -53,6 +53,9 @@ jobs:
         run: |
           chmod 755 ./scripts/show_hardware_info.sh
           ./scripts/show_hardware_info.sh
+          pwd
+          ls kernel_source/
+          du -h -d1
 
       - name: Install basic dependencies
         run: |
@@ -64,15 +67,6 @@ jobs:
             libelf-dev rsync kmod git cpio wget zip \
             unzip python3 python-is-python3 make u-boot-tools \
             xz-utils python3-pip ccache rsync dos2unix
-
-      - name: Download kernel source (if not cached)
-        if: steps.cache-kernel.outputs.cache-hit != 'true'
-        run: |
-          wget -O U30Air_AndroidT_kernel-5.4.254.tar.gz "https://download.ztedevices.com/device/global/support/opensource/2/20240424_01/U30Air_AndroidT_kernel(5.4.254).tar.gz#W3"
-          mkdir -p kernel_source
-          tar -xzf U30Air_AndroidT_kernel-5.4.254.tar.gz -C kernel_source
-          # 创建缓存标识文件
-          date > kernel_source/cache_version.txt
 
       - name: Build kernel with clang 12.1.0 (clang-r416183b)
         run: |
@@ -100,44 +94,3 @@ jobs:
           path: |
             kernel_source/bsp/kernel5.4/kernel5.4/out/kernel_out_directory.zip
           retention-days: 30
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: success()
-
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: u30air-kernel-build-artifacts-2
-          path: ./artifacts
-
-      - name: List downloaded artifacts
-        run: |
-          echo "当前目录结构:"
-          pwd
-          ls -la
-          echo "Artifacts 目录结构:"
-          ls -la ./artifacts/
-          
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: "zte-u30air-kernel-build"
-          name: "zte-u30air kernel build"
-          body: |
-            # Kernel Build
-          
-            ## 包含文件：
-            - `kernel_out_directory.zip` - 部分的编译输出目录
-            ## 说明：
-            - ✅ 基于 [ZTE官方ZTE - Opensource](https://opensource.ztedevices.com/) 内核源码
-            - ✅ 使用 [clang-r416183b](https://android.googlesource.com/platform//prebuilts/clang/host/linux-x86/+/b669748458572622ed716407611633c5415da25c/clang-r416183b/) 工具链编译
-
-          draft: false
-          prerelease: false
-          files: |
-            ./artifacts/kernel_out_directory.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
