--- a/.github/workflows/F50-TEST.yml
+++ b/.github/workflows/F50-TEST.yml
@@ -30,6 +30,13 @@ jobs:
           android: true
           dotnet: true
 
+      - name: Cache clang toolchain
+        uses: actions/cache@v3
+        id: cache-clang
+        with:
+          path: ~/clang-r416183b
+          key: clang-r416183b
+
       - name: Setup massive swap
         run: |
           free -h
@@ -80,7 +87,8 @@ jobs:
         run: |
           cd kernel_source/bsp/kernel5.4/kernel5.4/
           cd out
-          zip -r kernel_out_directory.zip arch .config vmlinux vmlinux.o .config.old .vmlinux.cmd Makefile
+          zip -r kernel_out_directory.zip arch .config
+          du -h -d1
         
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -89,44 +97,3 @@ jobs:
           path: |
             kernel_source/bsp/kernel5.4/kernel5.4/out/kernel_out_directory.zip
           retention-days: 30
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: success()
-
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: F50-kernel-build-artifacts
-          path: ./artifacts
-
-      - name: List downloaded artifacts
-        run: |
-          echo "当前目录结构:"
-          pwd
-          ls -la
-          echo "Artifacts 目录结构:"
-          ls -la ./artifacts/
-          
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: "ZTE-F50-kernel-build"
-          name: "ZTE-F50 kernel build"
-          body: |
-            # Kernel Build
-          
-            ## 包含文件：
-            - `kernel_out_directory.zip` - 部分的编译输出目录
-            ## 说明：
-            - ✅ 基于 [ZTE官方ZTE - Opensource](https://opensource.ztedevices.com/) 内核源码
-            - ✅ 使用 [clang-r416183b](https://android.googlesource.com/platform//prebuilts/clang/host/linux-x86/+/b669748458572622ed716407611633c5415da25c/clang-r416183b/) 工具链编译
-
-          draft: false
-          prerelease: false
-          files: |
-            ./artifacts/kernel_out_directory.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
