--- a/.github/workflows/U30Air-TEST.yml
+++ b/.github/workflows/U30Air-TEST.yml
@@ -34,10 +34,11 @@ jobs:
 
       - name: Cache clang toolchain
         uses: actions/cache@v3
-        id: cache-clang
         with:
           path: ~/clang-r416183b
           key: clang-r416183b
+          restore-keys: |
+            clang-r416183b
 
       - name: Free disk space
         uses: jlumbroso/free-disk-space@main
