--- a/.github/workflows/U30Air-TEST.yml
+++ b/.github/workflows/U30Air-TEST.yml
@@ -40,6 +40,16 @@ jobs:
           restore-keys: |
             clang-r416183b
 
+      - name: Show hardware info
+        run: |
+          echo "=== 检查clang-r416183b缓存结果 ==="
+          if [ -f "~/clang-r416183b" ]; then
+              echo "✅ clang-r416183b缓存成功"
+          else
+              echo "❌ clang-r416183b缓存失败"
+              exit 1
+          fi
+
       - name: Free disk space
         uses: jlumbroso/free-disk-space@main
         with:
@@ -61,9 +71,6 @@ jobs:
         run: |
           chmod 755 ./scripts/show_hardware_info.sh
           ./scripts/show_hardware_info.sh
-          pwd
-          ls kernel_source/
-          du -h -d1
 
       - name: Install basic dependencies
         run: |
