--- a/.github/workflows/U30Air-TEST.yml
+++ b/.github/workflows/U30Air-TEST.yml
@@ -44,6 +44,7 @@ jobs:
         run: |
           du -h -d1
           ls ~/
+          mv clang-r416183b ~/clang-r416183b
           echo "=== 检查clang-r416183b缓存结果 ==="
           if [ -f "~/clang-r416183b" ]; then
               echo "✅ clang-r416183b缓存成功"
