--- a/.github/workflows/kirin970.yml
+++ b/.github/workflows/kirin970.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: install python2.7 from cache
         run: |
-          cd  python-2.7.18
+          cd  Python-2.7.18
           make install
           python --version
 
