--- a/.github/workflows/kirin970.yml
+++ b/.github/workflows/kirin970.yml
@@ -22,17 +22,21 @@ jobs:
           sudo apt-get install -y \
             curl build-essential \
             libncurses-dev bison bc flex libssl-dev \
-            gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi \
+            gcc-arm-linux-gnueabi xz-utils ccache rsync \
             libelf-dev rsync kmod git cpio wget zip \
-            unzip python3 python-is-python3 make xz-utils python3-pip ccache rsync
+            unzip make 
+            
+      - name: Cache Python 2.7
+        uses: actions/cache@v4
+        with:
+          path: Python-2.7.18
+          key: python-2.7.18
+          restore-keys: |
+            python-2.7.18
 
-      - name: Build and Install Python 2.7 
+      - name: install python2.7 from cache
         run: |
-          wget -q https://www.python.org/ftp/python/2.7.18/Python-2.7.18.tgz
-          tar -xzf Python-2.7.18.tgz
-          cd Python-2.7.18
-          ./configure --enable-optimizations
-          make -j$(nproc)
+          cd  Python-2.7.18
           make install
           python --version
 
