--- a/.github/workflows/kirin970.yml
+++ b/.github/workflows/kirin970.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           git clone --depth 1 $REPO_URL -b $REPO_BRANCH kernel_source
           cd kernel_source
-          rm -rf KernelSU-Next
+          rm -rf KernelSU
           curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s v0.9.5
 
       - name: Build kernel
