--- a/.github/workflows/xaga.yml
+++ b/.github/workflows/xaga.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   REPO_URL: https://github.com/LeeHe-gif/android_kernel_xiaomi_mt6895.git
-  REPO_BRANCH: 16
+  REPO_BRANCH: yangyyyy15-patch-1
   TZ: Asia/Shanghai
 
 jobs:
